--- a/css.css
+++ b/css.css
@@ -1,15 +1,30 @@
+/*header*/
 #titre
 {
      display: grid;
      align-items: center;
      width: 100%;
-     background-color: aquamarine;
-     height: 400px;
-     border: 10px 0 0 0 black;
+     background-color:none;
+     height: 250px;
+     border-bottom: 1px solid black;
+     
+}
+.h1
+{
+     font-size: 80px;
+     color: orange;
+     margin-bottom: 10px;
+     margin-top: 10px;
+     padding-left: 10px;
+}
+.poste
+{
+     color: blue;
+     padding-left: 100px;
+     font-size:large;
 }
 .name
 {
-     color: red;
      grid-row-start: 1;
      grid-row-end: 2;
      grid-column-start: 1;
@@ -22,9 +37,104 @@
      flex-direction: column;
      grid-row-start: 1;
      grid-row-end: 2;
-     grid-column-start: 9;
+     grid-column-start: 10;
      grid-column-end: 12;
      line-height: 50px ;
-     height: 100%;
- 
+     height: 70%;
+     padding-left: 10px;
+     border-left: 1px solid black;
+}
+.naissance
+{
+     display: flex;
+     align-items: center;
+     
+}
+.tooltip
+{
+     margin: 5px;
+}
+.tooltip .tooltiptext 
+{
+     opacity: 0;
+     transition: opacity 1s;
+     margin:10px
+}
+   .tooltip:hover .tooltiptext
+{
+     opacity: 1;
+}
+.police_texte 
+{
+     text-decoration: none;
+     color: black;
+}
+/*section*/
+#intro
+{
+     display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+img
+{
+     object-fit: cover;
+}
+#identity
+{
+     
+     background-size: cover;
+    background-position: center;
+     width: 20%;
+     height: 240px;
+     border-radius: 60%; 
+}
+#menu
+{
+    display: grid;
+    justify-content: space-around;
+    grid-template-columns:  20% 20% 20% 20% 20%; 
+    width: 100%;
+}
+.barre_menu
+{
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     height: 99px;
+}
+.barre_menu:nth-child(1)
+{
+     grid-row-start: 1;
+     grid-row-end: 2;
+     grid-column-start: 1;
+     grid-column-end: 2;
+}
+.barre_menu:nth-child(2)
+{
+     grid-row-start: 1;
+     grid-row-end: 2;
+     grid-column-start: 3;
+     grid-column-end: 4;
+}
+.barre_menu:nth-child(3)
+{
+     grid-row-start: 1;
+     grid-row-end: 2;
+     grid-column-start: 5;
+     grid-column-end: 6;
+}
+.barre_menu:nth-child(4)
+{
+     grid-row-start: 2;
+     grid-row-end: 3;
+     grid-column-start: 2;
+     grid-column-end: 3;
+}
+.barre_menu:nth-child(5)
+{
+     grid-row-start: 2;
+     grid-row-end: 3;
+     grid-column-start: 4;
+     grid-column-end: 5;
 }
